header spacing fixes.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,6 +10,10 @@
   img {
     height: 6rem;
   }
+  div#content h3,
+  div#content h5 {
+    margin: 1em 0;
+  }
   div#content > div {
     margin: 4em;
   }
@@ -40,9 +44,6 @@
   div#content > div {
     margin: 2em 2em;
   }
-  div#content > div h3 {
-    margin: 0
-  }
   div#languages,
   div#frameworks {
     text-align: left !important;
@@ -53,6 +54,7 @@
   }
   div#languages h3,
   div#frameworks h3 {
+    margin: 0;
     font-size: 1.25rem;
     text-transform: uppercase !important;
   }
